--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,109 @@
-/*
+/* .highlighter-ribbon-icon {
+    border: 2px solid;
+    border-radius: 8px !important;
+} */
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
+mark {
+    border-radius: 3px;
+    text-shadow: 1px 1px 2px #000000;
+}
 
-If your plugin does not need CSS, delete this file.
+.modal {
+    width: auto;
+    min-height: 200px;
+    max-height: auto;
+}
 
-*/
+
+
+.highlight-modal-title {
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-align: center;
+    margin-top: -.7rem;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;
+}
+
+.color-container {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.current-color-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    flex-direction: row;
+    margin-top: 1.6rem;
+}
+
+.current-color-title {
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: white;
+    margin-right: 1rem;
+}
+
+.current-color-preview {
+    width: 25px;
+    height: 25px;
+    border-radius: 8px;
+    margin-left: 25px;
+}
+
+.available-colors-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.available-colors-container>div {
+    width: 25px;
+    height: 25px;
+    border-radius: 8px;
+    margin: 0.5rem;
+    cursor: pointer;
+}
+
+/* mobile */
+@media (max-width: 768px) {
+    .highlight-modal-title {
+        font-size: 1.5rem;
+    }
+
+    .current-color-title {
+        font-size: 1rem;
+    }
+}
+
+/* extra small */
+@media (max-width: 220px) {
+    .highlight-modal-title {
+        font-size: 1.1rem;
+        text-underline-offset: 0.2rem;
+    }
+
+    .current-color-title {
+        font-size: 0.8rem;
+    }
+}
+
+/* @media (prefers-color-scheme: dark) {
+    .highlighter-ribbon-icon {
+        border: 1px solid #ccc !important;
+    }
+} */
